# 360Depth

./: CMakeLists.txt  LICENSE  README.md  build.sh
Examples/: image.cpp
include/: Coordinate.hpp  SfM.hpp  SphereSweep.hpp  System.hpp  functions.hpp  type.hpp
src/: Coordinate.cpp  SfM.cpp  SphereSweep.cpp  System.cpp  functions.cpp
